--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Omars Development Hub is a platform showcasing various projects developed using React." />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="preload" href="path/to/your/styles.css" as="style" onload="this.rel='stylesheet'">
+      <noscript><link rel="stylesheet" href="path/to/your/styles.css"></noscript>
+
     <title>Omars Development Hub</title>
   </head>
   <body>
